# ayder

./: .clang-format  .gitignore  CMakeLists.txt  DESIGN_PARTNERS.md  Dockerfile  Dockerfile.musl  EVIDENCE.md  LICENSE  Makefile  README.md  REPOSITORY.md  ayder  barintazalau.sh  bench_ndjson_chunked.sh  broker_prod_v2_test.sh  concurrency_skew_rl.sh  concurrency_skew_rlv2.sh  crm_json_test.sh  docker-compose.ha5.yml  docker-compose.yml  entrypoint.sh  kv_durability_proof.sh  local_rotation_test.sh  metrics.prom  multi_encoding_smoke.sh  partition_test.sh  post.lua  prometheus.yml  ramforge-alerts.yml  test_broker_v2.sh  zero-pause-rdb_test.sh
cluster/: README.md  generate_certs.sh
demos/: README.md
docs/: README.md  api-reference.md  architecture.md  faq.md  operations.md  outbound_pipeline_spec.md  quickstart.md  wiki-publish.md
examples/: README.md
scripts/: README.md  _auth.lua  bench_sealed.sh  chaos-ha-local.sh  chaos-ha.sh  consume.lua  consume_tail.lua  kv_get.lua  kv_set.lua  mixed.lua  pressure_cooker-rotation.sh  pressure_cooker-zero-pause.sh  produce_batch_sealed.lua  produce_single_sealed.lua  render-chaos-report.sh  run-chaos-suite.sh  run_broker_bench_sealed.sh  user_rand.lua
src/: aof_batch.c  aof_batch.h  app.c  app.h  app_routes.c  app_routes.h  cluster.c  cluster.h  common.h  crc32c.c  crc32c.h  fast_json.h  globals.c  globals.h  http_server.c  http_server.h  http_timing.h  log.h  main.c  metrics_shared.c  metrics_shared.h  object_pool.c  object_pool.h  persistence_zp.c  persistence_zp.h  ramforge.c  ramforge.h  ramforge_ha_config.c  request.c  (+30 more)
(+168 files in other folders)
